force-app/main/default/objects/Sites__c/fields/Utility__c.field-meta.xml
<CustomField>
    <fullName>Utility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Electric Utility Company. Enter &quot;Not Applicable&quot; if no interconnection.</inlineHelpText>
    <label>Electric Utility</label>
    <referenceTo>Utility__c</referenceTo>
    <relationshipLabel>Sites (Electric Utility)</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>