force-app/main/default/objects/Sites__c/fields/Utility_Text__c.field-meta.xml
<CustomField>
    <fullName>Utility_Text__c</fullName>
    <formula>Utility__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utility Text</label>
    <type>Text</type>
</CustomField>