force-app/main/default/objects/Sites__c/fields/Vendor_support_services__c.field-meta.xml
<CustomField>
    <fullName>Vendor_support_services__c</fullName>
    <label>Vendor support services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>