force-app/main/default/objects/Sites__c/fields/Will_the_LGens_be_grid_forming__c.field-meta.xml
<CustomField>
    <fullName>Will_the_LGens_be_grid_forming__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EDS-4456</description>
    <label>Will the LGens be grid forming?</label>
    <type>Checkbox</type>
</CustomField>