force-app/main/default/objects/Sites__c/fields/ZCF_k_W_Price__c.field-meta.xml
<CustomField>
    <fullName>ZCF_k_W_Price__c</fullName>
    <label>ZCF $k/W Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>