force-app/main/default/objects/Sites__c/fields/Zero_Carbon_Fuel_capability__c.field-meta.xml
<CustomField>
    <fullName>Zero_Carbon_Fuel_capability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zero Carbon Fuel capability?</label>
    <type>Checkbox</type>
</CustomField>