force-app/main/default/objects/Sites__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Number_of_Units__c</columns>
    <columns>Street_1__c</columns>
    <columns>City__c</columns>
    <columns>State_Region__c</columns>
    <columns>Country__c</columns>
    <columns>Postal_Code__c</columns>
    <columns>Expected_Delivery_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>MSE_Project_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>