force-app/main/default/objects/Sites__c/listViews/Closed_Won_Sites.listView-meta.xml
<ListView>
    <fullName>Closed_Won_Sites</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>City__c</columns>
    <columns>State_Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Stage__c</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </filters>
    <filters>
        <field>Active_Sale__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Closed Won Sites</label>
</ListView>