force-app/main/default/objects/Sites__c/listViews/My_Sites.listView-meta.xml
<ListView>
    <fullName>My_Sites</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Number_of_Units__c</columns>
    <columns>City__c</columns>
    <columns>State_Region__c</columns>
    <columns>Utility__c</columns>
    <columns>Preferred_Fuel_Type__c</columns>
    <columns>Expected_Delivery_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Opportunity_Stage__c</field>
        <operation>notEqual</operation>
        <value>Dormant,Closed Won,Closed Lost</value>
    </filters>
    <label>My Active Sites</label>
</ListView>